@@ -36,6 +36,7 @@ AC_W3M_MENU
 AC_W3M_COOKIE
 AC_W3M_DICT
 AC_W3M_HISTORY
+AC_W3M_DIGEST_AUTH
 AC_W3M_NNTP
 AC_W3M_GOPHER
 
